# decode-my-brain

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  NEXT_STEPS.md  PROJECT_AUDIT_REPORT.md  README.md  app.py  challenges.py  config.py  decoders.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-e2e.txt  requirements.txt  simulation.py  utils.py  visualization.py
.github/workflows/: ci.yml  deploy.yml
decoders/: __init__.py  base.py  direction.py  evaluation.py  kalman.py
engine/: __init__.py  game.py
pages/: analyze.py  explore.py  learn.py  play.py  setup.py
simulation/: __init__.py  core.py  hierarchy.py  temporal.py
tests/: conftest.py  test_challenges.py  test_config.py  test_decoders.py  test_engine.py  test_integration.py  test_pages.py  test_simulation.py  test_ui_interactions.py  test_utils.py  test_visualization.py
tests/e2e/: conftest.py  test_app_browser.py
visualization/: __init__.py  analysis.py  bci.py  colors.py  manifold.py  network.py  raster.py  tuning.py  walkthrough.py
