[project]
name = "decode-my-brain"
version = "1.0.0"
description = "Interactive Streamlit app for neuroscience education: neural coding, decoding, and BCIs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Decode My Brain Team"},
]
keywords = ["neuroscience", "neural-coding", "streamlit", "education", "bci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "streamlit~=1.36",
    "numpy~=1.24",
    "scipy~=1.10",
    "plotly~=5.18",
    "pandas~=2.0",
    "scikit-learn~=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
e2e = [
    "playwright>=1.40",
    "pytest-playwright>=0.4",
    "pytest-base-url>=2.1",
    "requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks end-to-end browser tests (deselect with '-m \"not e2e\"')",
    "ui: marks Streamlit AppTest UI interaction tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (Streamlit pattern)
    "SIM108", # use ternary operator (readability preference)
    "RUF012", # mutable class variables (dataclass pattern)
]

[tool.ruff.lint.isort]
known-first-party = [
    "simulation", "decoders", "visualization", "engine",
    "challenges", "utils", "config",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/", "knowledge/", "pages/"]
